[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Battle/SpawnerSpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/creep.wav" type="AudioStream" id=2]
[ext_resource path="res://_common/GUI/HealthBarUnder.png" type="Texture" id=3]
[ext_resource path="res://_common/GUI/HealthBarOver.png" type="Texture" id=4]
[ext_resource path="res://_common/GUI/HealthBarFill.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Battle/CreepSpawnerRubble.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemies/shlorpVoice.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Battle/CreepSpawner.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0147

[node name="SpawnerSpawner" type="StaticBody2D" groups=["SpawnerSpawners"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
num_spawners_per_wave = 3
spawner = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
visible = false
color = Color( 0.607843, 0.282353, 0.121569, 1 )
polygon = PoolVector2Array( -8, -13, -5, -39, 11, -22, 22, -42, 21, -8, 46, 8, 15, 13, 14, 38, -1, 19, -38, 27, -24, 1, -26, -23 )

[node name="Label" type="Label" parent="Sprite"]
visible = false
margin_left = -18.0
margin_top = -39.0
margin_right = 22.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 18, 7 )
text = "Spawn"
align = 1

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NewCreepNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = -54.0
margin_top = -67.0
margin_right = 59.0
margin_bottom = -27.0
max_value = 1.0
step = 0.05
value = 1.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DecayTimer" type="Timer" parent="."]

[node name="corpse" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 4 )
scale = Vector2( 1.8059, 1.8059 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NewSpawnerNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
